--- a/frontend/app/package.json
+++ b/frontend/app/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^5.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router": "^7.2.0",
     "sass": "1.77.6"
   },
   "devDependencies": {
