--- a/frontend/app/package.json
+++ b/frontend/app/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.6.1",
     "@tanstack/react-query": "^5.66.9",
     "@tanstack/react-router": "^1.111.11",
     "antd": "^5.24.2",
