--- a/backend/Taskfile.yaml
+++ b/backend/Taskfile.yaml
@@ -23,6 +23,7 @@ tasks:
       - migrate -path internal/db/migrations/ -database $PG_URL -verbose down
 
   make-migration:
+    desc: "Create a new migration set with a user provided name"
     cmds:
       - migrate create -ext sql -dir internal/db/migrations -seq {{.CLI_ARGS}}
       - echo 'New migration generated! Make sure to verify new files in internal/db/migrations'
