fixed issue with backend Dockerfile - removed volume mounts because it was overwriting binary

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,26 +2,23 @@ FROM golang:1.22-alpine
 
 WORKDIR /app
 
-# Install necessary tools
-RUN apk add --no-cache curl git
+# Install build dependencies
+RUN apk add --no-cache git
 
 # Copy Go module files first for better caching
 COPY go.* ./
-RUN go mod download || echo "No dependencies to download"
+RUN go mod download || echo "Warning: go mod download failed"
 
 # Copy the rest of the application
 COPY . .
 
-# Build with explicit error checking
-RUN if [ -f server.go ]; then \
-    echo "Building server..." && \
-    go build -o server server.go && \
-    echo "Build successful"; \
-    else \
-    echo "Error: server.go not found" && exit 1; \
-    fi
+# Check if server.go exists and print directory contents
+RUN ls -la
+RUN if [ -f server.go ]; then echo "server.go exists"; else echo "server.go does not exist!"; fi
+
+# Attempt build with verbose output
+RUN go build -v -o server server.go || (echo "BUILD FAILED!" && exit 1)
 
 EXPOSE 8080
 
-# Use the executable directly (will fail clearly if missing)
 CMD ["./server"]
