--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,8 @@ frontend/app/.env.development.local
 frontend/app/.env.test.local
 frontend/app/.env.production.local
 
+**/*.env
+
 # Backend
 # Do we need this here btw for the backend?
 # # Database files
