--- a/frontend/app/package.json
+++ b/frontend/app/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.6.1",
+    "@fontsource/poppins": "^5.2.5",
     "@tanstack/react-query": "^5.66.9",
     "@tanstack/react-router": "^1.111.11",
     "antd": "^5.24.2",
