--- a/backend/Taskfile.yaml
+++ b/backend/Taskfile.yaml
@@ -4,6 +4,7 @@ dotenv: ['../.env']
 
 vars:
       MPATH: "internal/db/migrations/"
+      PG_URL: postgresql://{{.POSTGRES_USER}}:{{POSTGRES_PASSWORD}}@localhost:{{POSTGRES_PORT}}/{{POSTGRES_DB}}?sslmode=disable
 
 tasks:
   build:
