--- a/.env.example
+++ b/.env.example
@@ -11,8 +11,15 @@ POSTGRES_PORT=5432
 # Frontend Configuration
 FRONTEND_PORT=5173
 
+#SMTP Configuration
+SMTP_PORT=587
+SMTP_ENDPOINT_ADDRESS=email-smtp.us-east-2.amazonaws.com
+SMTP_USER=user
+SMTP_PASSWORD=password
+
 # Application Environment
 ENV=development
 # development: Enable debug logging, use local database, hot reload.
 # staging: Connect to a staging database, test integrations.
 # production: Disable debug logging, use optimized settings.
+
