--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,5 @@
 # Server Configuration
 PORT=8080
-CLERK_SECRET_KEY="xxxxxxxxx"
-
 # Database Configuration
 POSTGRES_USER=appuser
 POSTGRES_PASSWORD=apppassword
@@ -10,6 +8,8 @@ POSTGRES_PORT=5432
 
 # Frontend Configuration
 FRONTEND_PORT=5173
+VITE_CLERK_PUBLISHABLE_KEY=pk_xxxxxxxxxx
+CLERK_SECRET_KEY=xxxxxxxxx
 
 #SMTP Configuration
 SMTP_PORT=587
@@ -17,6 +17,11 @@ SMTP_ENDPOINT_ADDRESS=email-smtp.us-east-2.amazonaws.com
 SMTP_USER=user
 SMTP_PASSWORD=password
 SMTP_TLS_MODE=starttls # Options: "starttls" or "tls"
+
+# TO ADD AN ENV VARIABLE ADD IT UNDER THE CORRECT HEADING, IF ONE DOES NOT
+# EXIST, CREATE IT
+#
+# EXAMPLE_ENV_VAR=example_value
 
 # Application Environment
 ENV=development
