--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -3,8 +3,8 @@ name: Backend CI
 on:
   pull_request:
     paths:
-      - 'backend/**'
-      - '.github/workflows/backend.yml'
+      - "backend/**"
+      - ".github/workflows/backend.yml"
 
 jobs:
   build:
@@ -12,30 +12,38 @@ jobs:
     defaults:
       run:
         working-directory: ./backend
-    
+
     steps:
       - uses: actions/checkout@v4
-      
+
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version: '1.22'
-      
+          go-version: "1.23"
+
       - name: Install dependencies
         run: go mod download
-      
+
       - name: Verify server.go exists
         run: |
           ls -la
           if [ -f server.go ]; then echo "server.go exists"; else echo "server.go does not exist!" && exit 1; fi
-      
+
       - name: Build server
         run: go build -v -o server server.go
-      
-      # - name: Test
-      #   run: go test -v ./...
-      
-      # - name: Docker build test
-      #   run: |
-      #     docker build -t backend-test .
-      #     docker image inspect backend-test
+
+      - name: Test
+        run: go test -v ./...
+
+      - name: Check Coverage
+        run: |
+          go tool cover -func=coverage.out | grep total | awk '{print $3}' | sed 's/%//'
+          if [ $(go tool cover -func=coverage.out | grep total | awk '{print $3}' | sed 's/%//') -lt 80 ]; then
+            echo "Coverage is below 80%!" && exit 1
+          fi
+
+      - name: Upload Coverage Report
+        uses: actions/upload-artifact@v3
+        with:
+          name: coverage-report
+          path: coverage.out
