Dsd 56: Clerk webhook backend logic (Authentication) and connect it to DB (#54)
* added: webhooks

* added: public metadata

* added: retries

* removed: double context

* added: connect db

* added: postgres

* update: env

* update: sqlite to postgres

* added: update and delete

* update: depending on env load file

* clean up

* added: users table and updated clerk logic

* update: create user logic

* update: env example

* update: gitignore

* update: loading envs

* update: phone numbers

* update: folder structure

* removed: godotenv

* fix: typo

* fix: conflicts

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
+# Clerk
+VITE_CLERK_PUBLISHABLE_KEY=publishable_key # Frontend
+CLERK_SECRET_KEY=secret_key
+CLERK_WEBHOOK=webhook_secret
+
 # Server Configuration
 PORT=8080
 # Database Configuration
@@ -5,6 +10,10 @@ POSTGRES_USER=appuser
 POSTGRES_PASSWORD=apppassword
 POSTGRES_DB=appdb
 POSTGRES_PORT=5432
+
+# Admin Credentials
+ADMIN_FIRST_NAME=xxxxxxx
+ADMIN_LAST_ANME=xxxxxxx
 
 # Frontend Configuration
 FRONTEND_PORT=5173
