update: .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
 # Clerk
 VITE_CLERK_PUBLISHABLE_KEY=publishable_key # Frontend
-CLERK_SECRET_KEY=secret_key
-CLERK_WEBHOOK=webhook_secret
+CLERK_SECRET_KEY=secret_key 
+# Ask a team member that has a Clerk access for wehbook secret
+CLERK_WEBHOOK=webhook_secret # Required
 
 # Server Configuration
 PORT=8080
@@ -10,6 +11,7 @@ POSTGRES_USER=appuser
 POSTGRES_PASSWORD=apppassword
 POSTGRES_DB=appdb
 POSTGRES_PORT=5432
+PG_URL="postgresql://appuser:apppassword@postgres:5432/appdb?sslmode=disable"
 
 # Admin Credentials
 ADMIN_FIRST_NAME=xxxxxxx
