--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 # Clerk
 VITE_CLERK_PUBLISHABLE_KEY=publishable_key # Frontend
-CLERK_SECRET_KEY=secret_key 
+CLERK_SECRET_KEY=secret_key # Backend Required
 # Ask a team member that has a Clerk access for wehbook secret
-CLERK_WEBHOOK=webhook_secret # Required
+CLERK_WEBHOOK=webhook_secret # Backend Required
 
 # Server Configuration
 PORT=8080
@@ -11,6 +11,7 @@ POSTGRES_USER=appuser
 POSTGRES_PASSWORD=apppassword
 POSTGRES_DB=appdb
 POSTGRES_PORT=5432
+# Backend Required
 PG_URL="postgresql://appuser:apppassword@postgres:5432/appdb?sslmode=disable"
 
 # Admin Credentials
