--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # Clerk
 VITE_CLERK_PUBLISHABLE_KEY=publishable_key # Frontend
 CLERK_SECRET_KEY=secret_key # Backend Required
-# Ask a team member that has a Clerk access for wehbook secret
+# Ask a team member that has Clerk access for wehbook secret
 CLERK_WEBHOOK=webhook_secret # Backend Required
 
 # Server Configuration
