--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 # Clerk
-VITE_CLERK_PUBLISHABLE_KEY=publishable_key # Frontend
-CLERK_SECRET_KEY=secret_key # Backend Required
+VITE_CLERK_PUBLISHABLE_KEY=pk_xxxxxxxxxx # Frontend
+CLERK_SECRET_KEY=xxxxxxx # Backend / Frontend Required
 # Ask a team member that has Clerk access for wehbook secret
-CLERK_WEBHOOK=webhook_secret # Backend Required
+CLERK_WEBHOOK=xxxxxxxx # Backend Required
 
 # Server Configuration
 PORT=8080
@@ -11,8 +11,7 @@ POSTGRES_USER=appuser
 POSTGRES_PASSWORD=apppassword
 POSTGRES_DB=appdb
 POSTGRES_PORT=5432
-# Backend Required
-PG_URL="postgresql://appuser:apppassword@postgres:5432/appdb?sslmode=disable"
+PG_URL=xxxxxxxxxxxxxxxxxxxxxxxxxxx # Backend Required
 
 # Admin Credentials
 ADMIN_FIRST_NAME=xxxxxxx
@@ -20,8 +19,6 @@ ADMIN_LAST_ANME=xxxxxxx
 
 # Frontend Configuration
 FRONTEND_PORT=5173
-VITE_CLERK_PUBLISHABLE_KEY=pk_xxxxxxxxxx
-CLERK_SECRET_KEY=xxxxxxxxx
 
 #SMTP Configuration
 SMTP_PORT=587
