--- a/.env.example
+++ b/.env.example
@@ -26,6 +26,8 @@ SMTP_ENDPOINT_ADDRESS=email-smtp.us-east-2.amazonaws.com
 SMTP_USER=user
 SMTP_PASSWORD=password
 SMTP_TLS_MODE=starttls # Options: "starttls" or "tls"
+SMTP_FROM=an_authorized_email@example.com
+TEST_SMTP_EMAIL=youremail@example.com
 
 # TO ADD AN ENV VARIABLE ADD IT UNDER THE CORRECT HEADING, IF ONE DOES NOT
 # EXIST, CREATE IT
