--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -60,7 +60,8 @@ jobs:
           SMTP_TEST_EMAIL: ${{vars.SMTP_TEST_EMAIL}}
           SMTP_FROM: ${{vars.SMTP_FROM}}
         run: |
-          for pkg in ${{ steps.check_changes.outputs.packages }}; do
+          IFS=',' read -ra pkgs <<< "${{ steps.check_changes.outputs.packages }}"
+          for pkg in "${pkgs[@]}"; do
             echo "Running tests in package: $pkg"
             pkg_relative=${pkg#backend/}
             go test -v ./$pkg_relative/...
