--- a/frontend/app/.env.development.local.example
+++ b/frontend/app/.env.development.local.example
@@ -2,9 +2,7 @@
 VITE_CLERK_PUBLISHABLE_KEY=pk_test_your_publishable_key
 
 # API configuration
-VITE_PORT=8080
-VITE_DOMAIN_URL=http://localhost
-VITE_SERVER_URL=http://localhost:8080
+VITE_BACKEND_URL=http://localhost:8080
 
 # Frontend Configuration
 FRONTEND_PORT=5173
