Add Docker and frontend configuration updates

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
   backend:
     build:
       context: ./backend
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.dev
     ports:
       - "${PORT:-8080}:${PORT:-8080}"
       - "2345:2345" 
@@ -34,26 +34,34 @@ services:
       - ./backend/tmp:/app/tmp
       - ./backend/temp:/app/temp
       - go-mod-cache:/go/pkg/mod
-    env_file: .env
+    env_file: backend/.env.development.local
     networks:
         - app-network
         - documenso-rentdaddy
-    #command: ["/bin/sh", "-c", "chmod +x /app/entrypoint.sh && chown root:root /app/entrypoint.sh && /app/entrypoint.sh"]
+    command: ["/bin/sh", "-c", "chmod +x /app/entrypoint.sh && chown root:root /app/entrypoint.sh && /app/entrypoint.sh"]
     
 
   frontend:
     build:
       context: ./frontend/app
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.dev
     ports:
       - "${FRONTEND_PORT:-5173}:${FRONTEND_PORT:-5173}"
     volumes:
       - ./frontend/app:/app
       - /app/node_modules
+      - /app/node_modules/.vite
+    environment:
+      # Ensure these variables are explicitly set for Vite
+      - VITE_BACKEND_URL=${VITE_BACKEND_URL:-http://localhost:8080}
+      - VITE_SERVER_URL=${VITE_SERVER_URL:-http://localhost:8080}
+      - VITE_CLERK_PUBLISHABLE_KEY=${VITE_CLERK_PUBLISHABLE_KEY:-pk_test_ZXF1YWwtaWd1YW5hLTgwLmNsZXJrLmFjY291bnRzLmRldiQ}
+      - VITE_DOCUMENSO_PUBLIC_URL=${VITE_DOCUMENSO_PUBLIC_URL:-http://localhost:3000}
+      - VITE_ENV=${VITE_ENV:-development}
     networks:
       - app-network
     env_file:
-      - .env  # Load .env file
+      - frontend/app/.env.development.local  # Load .env file
 
 networks:
   app-network:
