Add app config system and improve frontend components
- Add app_config DB table for storing application settings
- Create app_config SQL queries and generated code
- Implement Documenso integration configuration
- Add production Docker files for backend and frontend
- Improve error handling in lease management
- Fix button styling in AdminViewEditLeases page
- Replace Button with ButtonComponent for consistent styling
- Enhance frontend components with better styling
- Remove unused demo and test components

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
       - "${POSTGRES_PORT:-5432}:5432"
     container_name: rentdaddy-postgres
     restart: always
-    env_file: .env
+    env_file: backend/.env.development.local
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
@@ -37,7 +37,6 @@ services:
     env_file: backend/.env.development.local
     networks:
         - app-network
-        - documenso-rentdaddy
     command: ["/bin/sh", "-c", "chmod +x /app/entrypoint.sh && chown root:root /app/entrypoint.sh && /app/entrypoint.sh"]
     
 
@@ -66,8 +65,6 @@ services:
 networks:
   app-network:
     driver: bridge
-  documenso-rentdaddy:
-    external: true
 
 volumes:
   postgres_data:
