cleaned up for deployment and local development - combined scripts and moved cmd under scripts

--- a/backend/.env.development.local.example
+++ b/backend/.env.development.local.example
@@ -2,11 +2,11 @@
 CLERK_SECRET_KEY=sk_test_your_secret_key
 CLERK_WEBHOOK=whsec_your_webhook_secret
 
-# This is for using the scripts on the backend - not necessary for running the app.
-ADMIN_CLERK_ID=user_your_clerk_landlord/admin_id
+# Admin Clerk ID (for automatic admin setup)
+ADMIN_CLERK_ID=user_your_clerk_id
 
-# OpenAI Integration
-OPENAI_API_KEY=the-dev-team-openai-key-see-james
+# OpenAI Integration (optional for chatbot)
+OPENAI_API_KEY=your_openai_key
 
 # Server Configuration
 PORT=8080
@@ -22,32 +22,36 @@ POSTGRES_HOST=postgres
 PG_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}?sslmode=disable
 
 # Admin Credentials
-ADMIN_FIRST_NAME=your_first_name
-ADMIN_LAST_NAME=your_last_name
-ADMIN_EMAIL=ezra@gitfor.ge
+ADMIN_FIRST_NAME=First
+ADMIN_LAST_NAME=Landlord
+ADMIN_EMAIL=admin@example.com
 
-# SMTP Configuration - GET THIS FROM JAMES OR REEM
+# SMTP Configuration
 SMTP_PORT=587
-SMTP_ENDPOINT_ADDRESS=email-smtp.your-region.amazonaws.com
-SMTP_USER=your_smtp_user_id
+SMTP_ENDPOINT_ADDRESS=email-smtp.example.com
+SMTP_USER=your_smtp_username
 SMTP_PASSWORD=your_smtp_password
 SMTP_TLS_MODE=starttls
-SMTP_FROM=your_from_email@example.com
-SMTP_TEST_EMAIL=<USE YOUR ADMIN EMAIL ON CLERK>
+SMTP_FROM=noreply@example.com
+SMTP_TEST_EMAIL=test@example.com
 
-# DOCUMENSO Integration
+# Documenso Integration
 DOCUMENSO_HOST=documenso
 DOCUMENSO_PORT=3000
 DOCUMENSO_API_URL=http://${DOCUMENSO_HOST}:${DOCUMENSO_PORT}
-DOCUMENSO_API_KEY=your_documenso_api_key
-DOCUMENSO_WEBHOOK_SECRET=your_documenso_webhook_secret
 DOCUMENSO_PUBLIC_URL=http://localhost:3000
+DOCUMENSO_API_KEY=api_your_documenso_key
+DOCUMENSO_WEBHOOK_SECRET=your_webhook_secret
+DOCUMENSO_SIGNING_PASSPHRASE=teamezraapp
+
+# Cron Job Authentication
+CRON_SECRET_TOKEN=your_secure_random_token
 
 # Application Environment
 ENV=development
 DEBUG_MODE=false
 
-# Authentication for local tests using http (or whatever format you use)
+# Authentication for tests
 BEARER_TOKEN=your_test_bearer_token
 
 # Development tools
