--- a/backend/Taskfile.yaml
+++ b/backend/Taskfile.yaml
@@ -1,11 +1,13 @@
 version: "3"
 
-dotenv: ["../.env"]
+# Load environment from backend first, then try to load from project root if it exists
+dotenv: [".env.development.local", ".env.production.local", ".env", "../.env"]
 
 vars:
   MPATH: "internal/db/migrations/"
+  # Using URL format without password to avoid exposing it in logs
   PG_URL: postgresql://{{.POSTGRES_USER}}@{{.POSTGRES_HOST}}:{{.POSTGRES_PORT}}/{{.POSTGRES_DB}}?sslmode=disable
-  DATABASE_URL: .PG_URL
+  DATABASE_URL: "{{.PG_URL}}"
 tasks:
   # 🧑‍💻 Local Docker Compose: Default naming
   seed:users:
@@ -17,7 +19,7 @@ tasks:
         ADMIN_FIRST_NAME='{{.ADMIN_FIRST_NAME | default \"First\"}}' 
         ADMIN_LAST_NAME='{{.ADMIN_LAST_NAME | default \"Landlord\"}}' 
         ADMIN_EMAIL='{{.ADMIN_EMAIL | default .SMTP_FROM | default \"ezra@gitfor.ge\"}}' 
-        go run scripts/cmd/seedusers/main.go scripts/cmd/seedusers/seed_users.go"
+        go run scripts/cmd/seed_users_with_clerk/main.go scripts/cmd/seed_users_with_clerk/seed_users.go"
     silent: false
 
   seed:data:
@@ -42,7 +44,7 @@ tasks:
         ADMIN_FIRST_NAME='{{.ADMIN_FIRST_NAME | default \"First\"}}' 
         ADMIN_LAST_NAME='{{.ADMIN_LAST_NAME | default \"Landlord\"}}' 
         ADMIN_EMAIL='{{.ADMIN_EMAIL | default .SMTP_FROM | default \"ezra@gitfor.ge\"}}' 
-        go run scripts/cmd/seedusers/main.go scripts/cmd/seedusers/seed_users.go
+        go run scripts/cmd/seed_users_with_clerk/main.go scripts/cmd/seed_users_with_clerk/seed_users.go
     silent: false
 
   seed:data:prod:
@@ -79,31 +81,33 @@ tasks:
       - echo "Migrations applied!"
 
   migrate:down:
+    desc: "Roll back one migration version"
     cmds:
-      - migrate -path {{.MPATH}} -database "{{.PG_URL}}" -verbose down 1
+      - PGPASSWORD="{{.POSTGRES_PASSWORD}}" migrate -path {{.MPATH}} -database "{{.PG_URL}}" -verbose down 1
       - echo "Migrating down 1 version.."
 
   migrate:version:
+    desc: "Show current migration version"
     cmds:
-      - migrate -path {{.MPATH}} -database "{{.PG_URL}}" -verbose version
+      - PGPASSWORD="{{.POSTGRES_PASSWORD}}" migrate -path {{.MPATH}} -database "{{.PG_URL}}" -verbose version
 
   migrate:status:
     desc: "Check migration version and if database is dirty"
     cmds:
-      - migrate -path {{.MPATH}} -database "{{.PG_URL}}" -verbose version
+      - PGPASSWORD="{{.POSTGRES_PASSWORD}}" migrate -path {{.MPATH}} -database "{{.PG_URL}}" -verbose version
 
   migrate:fix-dirty:
     desc: "Fix a dirty database state by forcing last successful version"
     cmds:
       - echo "Checking migration status..."
-      - migrate -path {{.MPATH}} -database "{{.PG_URL}}" force 1
+      - PGPASSWORD="{{.POSTGRES_PASSWORD}}" migrate -path {{.MPATH}} -database "{{.PG_URL}}" force 1
       - echo "Database migration state reset!"
 
   migrate:reset:
     desc: "Reset database (wipe all data and re-run migrations)"
     cmds:
-      - migrate -path {{.MPATH}} -database "{{.PG_URL}}" -verbose down
-      - migrate -path {{.MPATH}} -database "{{.PG_URL}}" -verbose up
+      - PGPASSWORD="{{.POSTGRES_PASSWORD}}" migrate -path {{.MPATH}} -database "{{.PG_URL}}" -verbose down
+      - PGPASSWORD="{{.POSTGRES_PASSWORD}}" migrate -path {{.MPATH}} -database "{{.PG_URL}}" -verbose up
   test:all:
     desc: "Test all in backend in container"
     cmds:
@@ -115,7 +119,7 @@ tasks:
       - chmod +x ./scripts/test-changed.sh
       - ./scripts/test-changed.sh
   db:connect:
-    desc: "Test changed files only in backend in container"
+    desc: "Connect to PostgreSQL database via psql"
     cmds:
       # Check if container is running
       - |
@@ -124,8 +128,9 @@ tasks:
           echo "Error: Container $CONTAINER_NAME is not running!"
         exit 1
         fi
-        echo "Running all tests in container: $CONTAINER_NAME..."
-        psql -h $POSTGRES_HOST -U $POSTGRES_USER -d $POSTGRES_DB
+        echo "Connecting to database: $POSTGRES_DB as user $POSTGRES_USER..."
+        # Set PGPASSWORD as env var to avoid exposing it in command line
+        PGPASSWORD="${POSTGRES_PASSWORD}" psql -h $POSTGRES_HOST -U $POSTGRES_USER -d $POSTGRES_DB
   cron:expire-leases:
     desc: "Run lease expiration job manually in backend container"
     cmds:
@@ -133,7 +138,8 @@ tasks:
   cron:test-expired-leases:
     desc: "Seed db with leases to expire"
     cmds:
-      - docker exec rentdaddy-backend sh -c "PGPASSWORD=$POSTGRES_PASSWORD psql -h $POSTGRES_HOST -U $POSTGRES_USER -d $POSTGRES_DB -f /app/internal/db/migrations/cron_test_seeder.sql"
+      # Using double quotes for variables to ensure they're expanded locally before being sent to docker exec
+      - docker exec rentdaddy-backend sh -c "PGPASSWORD=\"$POSTGRES_PASSWORD\" psql -h \"$POSTGRES_HOST\" -U \"$POSTGRES_USER\" -d \"$POSTGRES_DB\" -f /app/internal/db/migrations/cron_test_seeder.sql"
 
   cron:test-status-update:
     desc: "Test the lease status update endpoint"
@@ -171,3 +177,12 @@ tasks:
     cmds:
       - task: sqlc:generate
       - task: migrate:up
+      
+  worker:run:
+    desc: "Build and run the Documenso worker for local development"
+    cmds:
+      - >
+        cd worker/documenso-worker && 
+        go build -o documenso-worker main.go && 
+        ./documenso-worker
+    silent: false
