--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,83 @@ services:
       retries: 5
     networks:
       - app-network
+
+  documenso-postgres:
+    image: postgres:15
+    container_name: documenso-postgres
+    restart: always
+    environment:
+      - POSTGRES_USER=documenso
+      - POSTGRES_PASSWORD=password
+      - POSTGRES_DB=documenso
+      - HOST=0.0.0.0
+    healthcheck:
+      test: ['CMD-SHELL', 'pg_isready -U documenso']
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    volumes:
+      - documenso_postgres_data:/var/lib/postgresql/data
+    networks:
+      - app-network
+      
+  documenso:
+    image: documenso/documenso:latest
+    container_name: documenso
+    depends_on:
+      documenso-postgres:
+        condition: service_healthy
+    environment:
+      - PORT=3000
+      - NEXT_PRIVATE_INTERNAL_WEBAPP_URL=http://documenso:3000
+      - NEXTAUTH_URL=http://localhost:3000
+      - NEXTAUTH_SECRET=RLEr6zqMuCKqF72TWD37Fw5eZ4C1T6puRZjVswbdvnc=
+      - NEXT_PRIVATE_ENCRYPTION_KEY=5W2//zrgqplKk4lvyW0X5dRbndCvp4BjOKS7M0Euaao=
+      - NEXT_PRIVATE_ENCRYPTION_SECONDARY_KEY=eA8YWF9UYQCQ4gAvLCo04xWUtqXt0tdRE3i505L9v5k=do
+      - NEXT_PUBLIC_WEBAPP_URL=http://localhost:3000
+      - NEXT_PUBLIC_MARKETING_URL=http://localhost:3000
+      - NEXT_PRIVATE_DATABASE_URL=postgresql://documenso:password@documenso-postgres:5432/documenso
+      - NEXT_PRIVATE_DIRECT_DATABASE_URL=postgresql://documenso:password@documenso-postgres:5432/documenso
+      - NEXT_PUBLIC_UPLOAD_TRANSPORT=database
+      - NEXT_PRIVATE_SMTP_TRANSPORT=log
+      - NEXT_PRIVATE_SMTP_FROM_NAME=RentDaddy
+      - NEXT_PRIVATE_SMTP_FROM_ADDRESS=noreply@example.com
+      - NEXT_PRIVATE_SIGNING_LOCAL_FILE_PATH=/opt/documenso/cert.p12
+      - NEXT_PRIVATE_SIGNING_PASSPHRASE=teamezraapp
+      - NEXT_PUBLIC_DISABLE_SIGNUP=false
+    ports:
+      - "3000:3000"
+    volumes:
+      - ./docker/documenso/cert.p12:/opt/documenso/cert.p12
+    networks:
+      - app-network
+  
+  documenso-worker:
+    build:
+      context: ./worker/documenso-worker
+    container_name: documenso-worker
+    depends_on:
+      documenso-postgres:
+        condition: service_healthy
+      documenso:
+        condition: service_started
+    environment:
+      - BACKEND_URL=http://backend:8080
+      - WEBHOOK_PATH=/webhooks/documenso
+      - POLL_INTERVAL=15
+      - POSTGRES_USER=documenso
+      - POSTGRES_DB=documenso
+      - POSTGRES_HOST=documenso-postgres
+      - POSTGRES_PORT=5432
+      - POSTGRES_PASSWORD=password
+      - STARTUP_DELAY=30
+      - MAX_CONNECTION_RETRIES=10
+      - DOCUMENSO_BASE_URL=http://documenso:3000
+      - DEBUG=true
+      - DOCUMENSO_WEBHOOK_SECRET=your_webhook_secret
+    networks:
+      - app-network
+  
   backend:
     build:
       context: ./backend
@@ -29,6 +106,8 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
+      documenso:
+        condition: service_started
     container_name: rentdaddy-backend
     restart: always
     volumes:
@@ -39,11 +118,15 @@ services:
       - ./backend/temp:/app/temp
       - go-mod-cache:/go/pkg/mod
     env_file: backend/.env.development.local
+    environment:
+      - DOCUMENSO_API_URL=http://documenso:3000
+      - DOCUMENSO_HOST=documenso
+      - DOCUMENSO_PORT=3000
+      - DOCUMENSO_PUBLIC_URL=http://localhost:3000
     networks:
         - app-network
     command: ["/bin/sh", "-c", "chmod +x /app/entrypoint.sh && chown root:root /app/entrypoint.sh && /app/entrypoint.sh"]
     
-
   frontend:
     build:
       context: ./frontend/app
@@ -65,6 +148,20 @@ services:
       - app-network
     env_file:
       - frontend/app/.env.development.local  # Load .env file
+      
+  ngrok:
+    image: ngrok/ngrok:latest
+    container_name: ngrok
+    restart: unless-stopped
+    ports:
+      - "4040:4040"
+    environment:
+      - NGROK_AUTHTOKEN=${NGROK_AUTHTOKEN}
+    command: "http backend:8080"
+    networks:
+      - app-network
+    depends_on:
+      - backend
 
 networks:
   app-network:
@@ -72,4 +169,5 @@ networks:
 
 volumes:
   postgres_data:
+  documenso_postgres_data:
   go-mod-cache:
