--- a/worker/documenso-worker/Dockerfile
+++ b/worker/documenso-worker/Dockerfile
@@ -2,6 +2,9 @@ FROM --platform=linux/amd64 golang:1.23 AS builder
 
 WORKDIR /app
 
+# Add build tools and set the correct platform flags
+RUN apt-get update && apt-get install -y gcc binutils
+
 # Copy go.mod first to leverage Docker layer caching
 COPY go.mod .
 
@@ -11,8 +14,9 @@ RUN go mod download
 # Copy the rest of the source code
 COPY . .
 
-# Build the application
-RUN CGO_ENABLED=0 GOOS=linux go build -o /documenso-worker .
+# Build the application with explicit architecture setting
+RUN apt-get update && apt-get install -y gcc musl-dev && \
+    CGO_ENABLED=0 GOOS=linux GOARCH=amd64 GOAMD64=v1 go build -ldflags="-s -w" -o /documenso-worker .
 
 # Create the minimal production image
 FROM --platform=linux/amd64 alpine:latest
