Fix: Backend improvements and bug fixes
This commit includes several improvements to the backend:

- Updated SQL queries and generated code for buildings
- Enhanced email template handling and configuration
- Improved handler logic for apartments, leases and users
- Optimized Docker container configurations
- Server enhancements for better stability

These changes collectively improve the reliability and performance
of the backend services.

--- a/backend/internal/templates/emails/config.json
+++ b/backend/internal/templates/emails/config.json
@@ -7,6 +7,10 @@
     "signing_complete": {
       "filename": "signing_complete.html",
       "subject": "Your RentDaddy lease agreement has been signed"
+    },
+    "verification_email": {
+      "filename": "verification_email.html",
+      "subject": "Please confirm your Documenso email address"
     }
   }
 }
